[package]
name = "codecrafters-bittorrent"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.68"                                                  # error handling
bytes = "1.11.0"                                                    # helps wrap responses from reqwest
clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
hex = "0.4.3"
paste = "1.0"
regex = "1"                                                        # for regular expressions
reqwest = { version = "0.11.18", features = ["json", "blocking"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_bencode = "0.2.3"                                            # for bencode encoding/decoding
serde_bytes = "0.11.12"                                            # for dealing with bytes
serde_json = "1.0.105"                                             # for json mangling
serde_urlencoded = "0.7.1"                                         # for url encoding
sha1 = "0.10.1"                                                    # hashing
tempfile = "3"                                                     # creating temporary directories
thiserror = "1.0.38"                                               # error handling
tokio = { version = "1.49.0", features = ["full"] }                # async http requests
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }          # for working with tokio streams
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] } # logging
url = "2.5.7"
